--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,9 +23,11 @@
       <p class="mb-0">
         Powered by
         <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
+		<!--
         with
-        <a href="https://github.com/cotes2020/jekyll-theme-chirpy/">Chirpy</a>
-        theme.
+        <a href="https://github.com/cotes2020/jekyll-theme-chirpy/">|</a>
+        |
+		-->
       </p>
     </div>
 
