--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,6 +46,7 @@ layout: page
 
 <div id="post-list">
 
+{% assign posts = site.posts | where:"hide", "false" %}
 {% for post in posts %}
 
   <div class="post-preview">
