--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,11 @@ layout: default
           {% endif %}
           </span>
 		  
+		  <span>
 		  <!-- 浏览量--> 
 		  浏览量:&nbsp;<span id="{{ post.url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}"> - </span>次.
-		  
+		  </span> 
+
         </div>
 
         <!-- lastmod -->
