--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,11 @@ layout: default
           {% endif %}
           </span>
         </div>
+		
+		<div>
+		<!-- 浏览量--> 
+		  浏览量:&nbsp;<span id="{{ post.url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}"> - </span>次.
+		</div>
 
         <!-- lastmod -->
         {%- capture filename -%}
