--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -150,6 +150,8 @@ layout: default
 
 {% include lozad.html %} 
 
+浏览量:&nbsp;<span id="{{ post.url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}"> - </span>次.
+
 <!-- 同时兼容http与https -->
 <script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
 <script>
