--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
 
 <!-- 同时兼容http与https -->
-<script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@4.6.1/dist/av-min.js"></script>
 <script>
     // 第一个参数是appid，第二个参数是appkey，此处的只是示例
     AV.initialize("GiK8t1mCvzpE0ebvxCq1tubG-MdYXbMMI", "adONTtW8QldsgD2nMkmQPexS");
