--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,9 @@ layout: default
             {{ site.author }}
           {% endif %}
           </span>
+		  
+			<p>浏览量:&nbsp;<span id="{{ post.url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}"> - </span>次.</p>
+			
         </div>
 		
 		
