--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -44,10 +44,10 @@
 
   /* Sidebar */
 
-  /* --sidebar-bg: radial-gradient( */
-  /* circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%); */
+  --sidebar-bg: radial-gradient( 
+   circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%); 
 
-  --sidebar-bg:white;
+
   
   --nav-cursor-color: black;
 
