--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -45,7 +45,7 @@
   /* Sidebar */
 
 	/* old color 
-  --sidebar-bg: radial-gradient( */ 
+  --sidebar-bg: radial-gradient( 
    circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%); 
    */
 
