--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -125,7 +125,7 @@ $sidebar-display: "sidebar-display";
     }
     &.active {
       .nav-link {
-        color: #ff9966;
+        color: #996633;
       }
     }
   }
