--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -49,7 +49,7 @@
    circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%); 
    */
 
-  --sidebar-bg:#bcb8b3;
+  --sidebar-bg:#white;
   
   --nav-cursor-color: black;
 
