--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -120,7 +120,7 @@ $sidebar-display: "sidebar-display";
     height: $tab-height;
     &:hover {
       .nav-link {
-        color: #blue;
+        color: #black;
       }
     }
     &.active {
