--- a/assets/css/_colors/light-syntax.scss
+++ b/assets/css/_colors/light-syntax.scss
@@ -11,7 +11,7 @@
   .highlight .hll { background-color: #ffffcc }
   .highlight .c { color: #999988; font-style: italic } /* Comment */
   .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-  .highlight .k { color: #000000; font-weight: bold } /* Keyword */
+  .highlight .k { color: #0300da; font-weight: bold } /* Keyword */
   .highlight .o { color: #000000; font-weight: bold } /* Operator */
   .highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
   .highlight .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
