--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,7 +62,7 @@ layout: page
     </div>
     <div class="post-content">
       <p>
-      {% assign _content = post.content %}
+      {% assign _content = post.excerpt %}
       {% include no-linenos.html %}
       {{ _content | markdownify | strip_html | truncate: 200 }}
       </p>
