--- a/assets/css/_addon/fonts.scss
+++ b/assets/css/_addon/fonts.scss
@@ -6,3 +6,11 @@
  */
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed:400,700|Source+Sans+Pro:400,600,700,900&display=swap');
+
+
+@font-face {
+    font-family: "AppleSDGothicNeoB";
+    src: url("/assets/fonts/AppleSDGothicNeoB.ttf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
