--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -259,6 +259,7 @@ $sidebar-display: "sidebar-display";
     -webkit-transition: border-color 0.35s ease-in-out;
     -moz-transition: border-color 0.35s ease-in-out;
     transition: border-color 0.35s ease-in-out;
+    transition: .6s;
   }
 
   &:hover>a {
