--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,36 +53,38 @@ layout: page
 {% for post in posts %}
 
   <div class="post-preview">
-    <div class="d-flex justify-content-between pr-xl-2">
-      <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
-      {% if post.pin %}
-        <i class="fas fa-thumbtack fa-fw text-muted mt-1 ml-2 mt-xl-2" data-toggle="tooltip" data-placement="left"
-        title="Pinned"></i>
-      {% endif %}
-    </div>
-    <div class="post-content">
-      <p>
-      {% assign _content = post.excerpt %}
-      {% include no-linenos.html %}
-      {{ _content | markdownify | strip_html | truncate: 200 }}
-      </p>
-    </div>
+    <div class="content-area">
+      <div class="d-flex justify-content-between pr-xl-2">
+        <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
+        {% if post.pin %}
+          <i class="fas fa-thumbtack fa-fw text-muted mt-1 ml-2 mt-xl-2" data-toggle="tooltip" data-placement="left"
+          title="Pinned"></i>
+        {% endif %}
+      </div>
+      <div class="post-content">
+        <p>
+        {% assign _content = post.excerpt %}
+        {% include no-linenos.html %}
+        {{ _content | markdownify | strip_html | truncate: 200 }}
+        </p>
+      </div>
 
-    <div class="post-meta text-muted">
-      <!-- posted date -->
-      <i class="far fa-clock fa-fw"></i>
-      <span class="timeago" data-toggle="tooltip" data-placement="bottom"
-        title="{{ post.date | date: site.data.date_format.tooltip }}">
-      {{ post.date | date: site.data.date_format.post }}
-      <i class="unloaded">{{ post.date | date_to_xmlschema }}</i>
-      </span>
-      <!-- page views -->
-      {% if site.google_analytics.pv.enabled %}
-      <i class="far fa-eye fa-fw"></i>
-      <span id="pv_{{-post.title-}}" class="pageviews">
-        <i class="fas fa-spinner fa-spin fa-fw"></i>
-      </span>
-      {% endif %}
+      <div class="post-meta text-muted">
+        <!-- posted date -->
+        <i class="far fa-clock fa-fw"></i>
+        <span class="timeago" data-toggle="tooltip" data-placement="bottom"
+          title="{{ post.date | date: site.data.date_format.tooltip }}">
+        {{ post.date | date: site.data.date_format.post }}
+        <i class="unloaded">{{ post.date | date_to_xmlschema }}</i>
+        </span>
+        <!-- page views -->
+        {% if site.google_analytics.pv.enabled %}
+        <i class="far fa-eye fa-fw"></i>
+        <span id="pv_{{-post.title-}}" class="pageviews">
+          <i class="fas fa-spinner fa-spin fa-fw"></i>
+        </span>
+        {% endif %}
+      </div>
     </div>
   </div> <!-- .post-review -->
 
