--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: page
   <div class="post-preview">
     {% if post.thumbnail }
     <div class="image-area">
-        <img src="{{ post.thumbnail }}"
+        <img src="{{ post.thumbnail }}" />
     </div>
     <div class="content-area">
     {% endif %}
