--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,8 +58,6 @@ layout: page
         <img src="{{ post.thumbnail }}" />
     </div>
     <div class="content-area col-lg-8">
-    {% else %}
-    <div>
     {% endif %}
       <div class="d-flex justify-content-between pr-xl-2">
         <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
@@ -92,7 +90,9 @@ layout: page
         </span>
         {% endif %}
       </div>
+      {% if post.thumbnail }
     </div>
+      {% endif %}
   </div> <!-- .post-review -->
 
 {% endfor %}
