--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ layout: page
 {% for post in posts %}
 
   <div class="post-preview">
-    {% if post.thumbnail }
+    {% if post.thumbnail %}
     <div class="image-area col-lg-3">
         <img src="{{ post.thumbnail }}" />
     </div>
@@ -90,9 +90,9 @@ layout: page
         </span>
         {% endif %}
       </div>
-      {% if post.thumbnail }
+    {% if post.thumbnail }
     </div>
-      {% endif %}
+    {% endif %}
   </div> <!-- .post-review -->
 
 {% endfor %}
