--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,7 @@ layout: page
         </span>
         {% endif %}
       </div>
-    {% if post.thumbnail }
+    {% if post.thumbnail %}
     </div>
     {% endif %}
   </div> <!-- .post-review -->
