--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -23,7 +23,7 @@
       padding-bottom: 15px;
       vertical-align: top;
 
-      >image {
+      >img {
         overflow: hidden;
         width: 100%;
       }
