--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -70,7 +70,7 @@
 
   } // .post-preview
   .post-preview :hover {
-    backgrount: rgb(228, 226, 226);
+    background: rgb(228, 226, 226);
     transition: .4s;
     border-radius: 20px
   }
