--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -22,10 +22,11 @@
       padding-top: 15px;
       padding-bottom: 15px;
       vertical-align: top;
-
+      background-color: initial;
       >img {
         overflow: hidden;
         width: 100%;
+
       }
 
     }
