--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,10 +54,10 @@ layout: page
   <a href="{{ post.url | relative_url }}">
     <div class="post-preview">
       {% if post.thumbnail %}
-      <div class="image-area col-lg-3">
+      <div class="image-area col-lg-3 col-md-3">
           <img src="{{ post.thumbnail }}" />
       </div>
-      <div class="content-area col-lg-8">
+      <div class="content-area col-lg-8 col-md-8">
       {% endif %}
         <div class="d-flex justify-content-between pr-xl-2">
           <h1>{{ post.title }}</h1>
