--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -16,7 +16,7 @@
     padding-top: 1.5rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--main-border-color);
-
+    transition: .7s
     .image-area {
       display: inline-block;
       padding-top: 15px;
@@ -70,7 +70,7 @@
     }
     &:hover {
       background: rgb(228, 226, 226);
-      transition: .4s;
+      transition: .7s;
       border-radius: 20px
     }
   } // .post-preview
