--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -16,7 +16,8 @@
     padding-top: 1.5rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--main-border-color);
-    transition: .7s
+    transition: .7s;
+
     .image-area {
       display: inline-block;
       padding-top: 15px;
