--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,9 @@
         <img src="{{ avatar_url }}" alt="avatar" onerror="this.style.display='none'">
       </a>
     </div>
-
+    <div id="loveSpring">
+      <span>I Love Spring</span>
+    </div>
     <div class="profile-text mt-3">
       <div class="site-title">
         <a href="{{ '/' | relative_url }}">{{- site.title -}}</a>
