--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -288,6 +288,7 @@ $sidebar-display: "sidebar-display";
   color: #27d02d;
   font-size: 1.5em;
   font-weight: 400;
+  display: none;
 }
 #search-result-wrapper {
   display: none;
