leaf style test

--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -282,7 +282,7 @@ $sidebar-display: "sidebar-display";
       -webkit-transform: scale(1.2);
       transform: scale(1.2);
       filter: hue-rotate(90deg) opacity(30%);
-
+      transition: .6s;
     }
   }
 } // #avatar
