--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: page
     <div class="post-preview">
       {% if post.thumbnail %}
       <div class="image-area col-lg-3 col-md-3">
-          <div class="image-cover" style="background-image:'{{ post.thumbnail }}'">
+          <div class="image-cover" style="background-image:url('{{ post.thumbnail }}'); ">
           </div>
       </div>
       <div class="content-area col-lg-8 col-md-8">
