--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -31,7 +31,8 @@
           overflow: hidden;
           width: 100%;
           border-radius: 20px;
-
+          background-repeat: no-repeat;
+          background-size: 100%;
         }
       }
 
