--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -29,6 +29,7 @@
         height:140px;
         background-repeat: no-repeat;
         background-size: 100%;
+        border-radius: 20px;
       }
 
     }
