--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ layout: page
   <a href="{{ post.url | relative_url }}">
     <div class="post-preview">
       {% if post.thumbnail %}
-      <div class="image-area col-lg-3 col-md-3">
+      <div class="image-area col-lg-3 col-md-3 col-8 offset-2">
           <div class="image-cover" style="background-image:url('{{ post.thumbnail }}'); ">
           </div>
       </div>
