--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -28,7 +28,7 @@
       .image-cover {
         height:140px;
         background-repeat: no-repeat;
-        background-size: 100%;
+        background-size: 100% 100%;
         border-radius: 20px;
       }
 
